--- a/GWAS.ipynb
+++ b/GWAS.ipynb
@@ -20,42 +20,42 @@
     "library(data.table)\n",
     "\n",
     "# Read in the phenotypes data\n",
-    "phenotypes <- fread(\"/home//mmihov/Projects/MS_TWAS_PheWAS_heritability/MS_Cox_PheWAS_Cor/data/V2/UoA_UKB_phenotypes_2021-19-11.txt\", data.table=F)\n",
+    "phenotypes <- fread(\"~Your_directory/phenotypes.txt\", data.table=F)\n",
     "\n",
     "# exclude individuals whith sex chromosome abnormalities\n",
-    "filtered=which(!is.na(phenotypes$sex_aneu))\n",
+    "filtered=which(!is.na(phenotypes\\$sex_aneu))\n",
     "\n",
     "nrow(phenotypes[filtered,])\n",
     "nrow(phenotypes[-filtered,])\n",
     "phenotypes=phenotypes[-filtered,]\n",
     "\n",
     "# exclude individuals which failed genotyping QC\n",
-    "filtered=which(is.na(phenotypes$gen_exclude))\n",
+    "filtered=which(is.na(phenotypes\\$gen_exclude))\n",
     "\n",
     "nrow(phenotypes[-filtered,])\n",
     "nrow(phenotypes[filtered,])\n",
     "phenotypes=phenotypes[filtered,]\n",
     "\n",
     "# exclude samples which are not europeans genetically\n",
-    "filtered=which(phenotypes$gen_ethnicity==1)\n",
+    "filtered=which(phenotypes\\$gen_ethnicity==1)\n",
     "\n",
     "nrow(phenotypes[-filtered,])\n",
     "nrow(phenotypes[filtered,])\n",
     "phenotypes=phenotypes[filtered,]\n",
     "\n",
     "# exclude samples whith missing Maternal smoking during pregnancy status\n",
-    "filtered=which(phenotypes$maternal_smoking==\"missing\")\n",
+    "filtered=which(phenotypes\\$maternal_smoking==\"missing\")\n",
     "\n",
     "nrow(phenotypes[filtered,])\n",
     "nrow(phenotypes[-filtered,])\n",
     "phenotypes=phenotypes[-filtered,]\n",
     "\n",
-    "phenotypes$maternal_smoking=as.numeric(pheno1$maternal_smoking)\n",
-    "phenotypes$education=as.numeric(pheno1$education)\n",
-    "phenotypes$alcohol=as.numeric(pheno1$alcohol)\n",
-    "phenotypes$lack_of_PA=as.numeric(pheno1$lack_of_PA)\n",
-    "phenotypes$deprv_index=as.numeric(pheno1$deprv_index)\n",
-    "phenotypes$smoking_status=as.numeric(pheno1$smoking_status)"
+    "phenotypes\\$maternal_smoking=as.numeric(phenotypes\\$maternal_smoking)\n",
+    "phenotypes\\$education=as.numeric(phenotypes\\$education)\n",
+    "phenotypes\\$alcohol=as.numeric(phenotypes\\$alcohol)\n",
+    "phenotypes\\$lack_of_PA=as.numeric(phenotypes\\$lack_of_PA)\n",
+    "phenotypes\\$deprv_index=as.numeric(phenotypes\\$deprv_index)\n",
+    "phenotypes\\$smoking_status=as.numeric(phenotypes\\$smoking_status)"
    ]
   },
   {
@@ -68,12 +68,12 @@
     "#Make phenotype variable containing FID and IID ID columns as required by regenie and a column for the trait we are testing\n",
     "pheno = phenotypes[,c(\"studiepersonid\",\"maternal_smoking\")]\n",
     "    colnames(pheno)[1]=\"FID\"\n",
-    "    pheno$IID=pheno$FID\n",
+    "    pheno\\$IID=pheno\\$FID\n",
     "\n",
     "#Make a covariate variable containing FID and IID ID columns as required by regenie and a columns containing the covariates to be used for adjusting\n",
     "cov = phenotypes[,c(\"studiepersonid\",\"sex,education,smoking_status,lack_of_PA, genoPC1,genoPC2,genoPC3,genoPC4,genoPC5,genoPC6,genoPC7,genoPC8,genoPC9,genoPC10,deprv_index,x_agebase,x_BMI\")]\n",
     "    colnames(pheno)[1]=\"FID\"\n",
-    "    pheno$IID=pheno$FID\n",
+    "    pheno\\$IID=pheno\\$FID\n",
     "\n",
     "#save them to files for later use"
    ]
